<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">心飞翔手机卫士</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 语音识别的相关字符串 -->
    <!--  <string name="app_name">百度语音示例</string>-->
    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="start_dialog">调用语音识别对话框</string>
    <string name="status">状态：</string>
    <string name="tofinish">说完</string>
    <string name="in_recog">正在识别</string>
    <string name="finished">完成:</string>
    <string name="error_occur">出错: 0x%1$s</string>
    <string name="error_start">启动失败: 0x%1$s</string>
    <string name="is_canceled">已取消</string>
    <string name="try_again">重试</string>
    <string name="volume">音量</string>
    <string name="start_tune">开始音</string>
    <string name="end_tune">结束音</string>
    <string name="setting">设置</string>
    <string name="choose_voice_type">请选择识别模式：</string>
    <string name="choose_dialog_theme">请选择识别对话框样式：</string>
    <string name="play_start_sound">播放开始音</string>
    <string name="play_end_sound">播放结束音</string>
    <string name="show_vol">显示识别音量</string>

	<string-array name="voice_tpye">
        <item>语音搜索模式</item>
		<item>语音输入模式</item>
    </string-array>
	<string-array name="dialog_theme">
        <item>暗蓝</item>
        <item>亮蓝</item>
        <item>暗绿</item>
        <item>亮绿</item>
        <item>暗橙</item>
        <item>亮橙</item>
        <item>暗红</item>
        <item>亮红</item>
    </string-array>
    
	 <string name="menu_settings">Settings</string>
</resources>
